NetworkPolicy/project2/centos1-env-dev.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: dev
  name: centos-dev1
  labels:
    env: dev
    app: centos
spec:
  cotainers:
    - image: centos
      name: centos-container
      tty: true
      stdin: true
