NetworkPolicy/project2/centos1-env-prod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: prod
  name: centos-prod1
  labels:
    env: prod
    app: centos
spec:
  containers:
    - image: centos
      name: centos-container
      tty: true
      stdin: true
