NetworkPolicy/project2/centos1-env-qa.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: qa
  name: centos-qa1
  labels:
    env: qa
    app: centos
spec:
  cotainers:
    - image: centos
      name: centos-container
      tty: true
      stdin: true
