NetworkPolicy/project2/httpd-env-dev.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: dev
  name: httpd-test1
  labels:
    env: dev
    app: httpd
spec:
  containers:
    - image: httpd
      name: httpd-container
      ports:
        - containerPort: 80
