NetworkPolicy/project2/httpd-env-prod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: prod
  name: httpd-prod1
  labels:
    env: prod
    app: httpd
spec:
  containers:
    - image: httpd
      name: httpd-container
      ports:
        - containerPort: 80
