NetworkPolicy/project2/httpd-env-qa.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: qa
  name: httpd-qa1
  label:
    env: qa
    app: httpd
spec:
  cotainers:
    - image: httpd
      name: httpd-container
      ports:
        - containerPort: 80
