NetworkPolicy/project2/deny-all-traffic-prod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: prod
  name: deny-all-traffic
  labels:
    pol: deny-all-traffic
spec:
  podSelector: {}
  ingress: []
